--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=test
 sonar.organization=Swalih04
 sonar.sources=src
-sonar.tests=test
+sonar.tests=__test__
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
