--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=test
-sonar.organization=Swalih04
+sonar.organization=swalih04
 sonar.sources=src
 sonar.tests=__test__
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
