--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
-sonar.projectKey=test
+sonar.projectKey=swalih04_actions-demo
 sonar.organization=swalih04
 sonar.sources=src
-sonar.tests=__test__
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.tests=__tests__
 sonar.host.url=https://sonarcloud.io
