--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=swalih04_actions-demo
+sonar.projectKey=swalih04_Actions
 sonar.organization=swalih04
 sonar.sources=src
-sonar.tests=__test__
+sonar.tests=__tests__
 sonar.host.url=https://sonarcloud.io
