--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Actions
+sonar.projectKey=Swalih04_Actions
 sonar.organization=Swalih04
 sonar.sources=src
-sonar.tests=__test__
+sonar.tests=__tests__
 sonar.host.url=https://sonarcloud.io
