--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,12 @@
 sonar.projectKey=Swalih04_Actions
 sonar.organization=swalih04
-sonar.sources=.
-sonar.tests=__tests__
 sonar.host.url=https://sonarcloud.io
+
+# 1. Define Sources and explicitly exclude the tests folder from them
+sonar.sources=.
+sonar.exclusions=**/__tests__/**, **/node_modules/**, build/**, dist/**
+
+# 2. Define Tests
+sonar.tests=__tests__
+# This tells Sonar that everything in this folder is a test file
+sonar.test.inclusions=__tests__/**/*.js, __tests__/**/*.jsx, __tests__/**/*.ts, __tests__/**/*.tsx
